--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "chroma-js": "^2.1.2",
     "gatsby": "^4.2.0",
     "gatsby-plugin-feed": "^4.2.0",
     "gatsby-plugin-gatsby-cloud": "^4.2.0",
@@ -32,6 +33,7 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "rehype-react": "^7.0.3",
+    "three": "^0.135.0",
     "typeface-merriweather": "0.0.72",
     "typeface-montserrat": "0.0.75"
   },
