--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "url": "https://github.com/rjsalvadorr/portfolio-v6"
   },
   "dependencies": {
+    "@fontsource/inconsolata": "^4.5.0",
+    "@fontsource/open-sans": "^4.5.2",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "chroma-js": "^2.1.2",
