Updating package manifest for 'release'

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "rj-portfolio",
+  "name": "rj-portfolio-v6",
   "private": true,
-  "description": "RJ Salvador's Portfolio",
-  "version": "6.0.0",
+  "description": "RJ Salvador's Portfolio (v6)",
+  "version": "1.0.0",
   "author": "RJ Salvador <rjsalvadorr@gmail.com>",
   "bugs": {
     "url": "https://github.com/rjsalvadorr/portfolio-v6"
