--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "gatsby-plugin-feed": "^5.13.1",
     "gatsby-plugin-gatsby-cloud": "^5.13.1",
     "gatsby-plugin-google-analytics": "^5.13.1",
-    "gatsby-plugin-image": "^3.14.1",
+    "gatsby-plugin-html-comments": "^1.0.0",
+    "gatsby-plugin-image": "^3.13.1",
     "gatsby-plugin-manifest": "^5.13.1",
     "gatsby-plugin-mdx": "^5.13.1",
     "gatsby-plugin-offline": "^6.13.1",
@@ -29,6 +30,7 @@
     "gatsby-remark-responsive-iframe": "^6.13.1",
     "gatsby-remark-smartypants": "^6.13.1",
     "gatsby-source-filesystem": "^5.13.1",
+    "gatsby-transformer-remark": "^6.13.1",
     "gatsby-transformer-sharp": "^5.13.1",
     "prismjs": "^1.29.0",
     "react": "^18.0.0",
